# Browser_Automation

./: .env.example  .gitignore  README.md  UPGRADE_PLAN.md  ai_consultant.py  architecture_plan.md  code_solver.py  main.py  memory_manager.py  multi_run.py  pyproject.toml  replay_direct.py  run.py  run_examly_days.py  session_store.py  stealth.py  tasks.py  test_examly.py  visual_grounding.py
hitl/: __init__.py  dashboard.py  pocketbase_client.py  setup_pocketbase.py
parsers/: crawlee_parser.py
prompts/: __init__.py  examly_base.py  examly_coding.py  examly_mcq.py  examly_submit.py  troubleshooting.py
proxy/: __init__.py  mitm_addon.py  rotator.py
