[project]
name = "browser-agent"
version = "0.2.0"
description = "MBU Examly browser automation agent with dedicated DSA coding solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core agent & browser automation
    "browser-use>=0.12.9",
    "langchain-google-genai>=4.2.4",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "python-ghost-cursor>=0.1.1",
    # Anti-detection & fingerprinting
    "playwright-stealth>=1.0.6",
    "curl-cffi>=0.7.4",
    # Utilities
    "loguru>=0.7.3",
    "pillow",
    # Page data extraction (optional but used by scrape_text_data action)
    "crawlee[playwright]>=1.7.2",
]
